--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employee_tracker-ch12",
   "version": "1.0.0",
   "description": "challenge 12",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/etapm/Employee_Tracker-ch12#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^16.0.3",
     "inquirer": "^8.2.4",
     "mysql2": "^3.2.0"
   }
